--- a/src/pages/nome-lista-modal/nome-lista-modal.html
+++ b/src/pages/nome-lista-modal/nome-lista-modal.html
@@ -19,21 +19,21 @@
           <ion-scroll scrollY="true" class="cardsNomes scroll">
             <ion-list>
               <p>
-                <ion-item>
-                  <ion-label floating>Nome</ion-label>
-                  <ion-input type="text"></ion-input>
+                <ion-item class="nomelista">
+                  <ion-label color="terci" stacked>Nome/Sobrenome</ion-label>
+                  <ion-input type="text" ></ion-input>
                 </ion-item>
               </p>
               <p>
                 <ion-item>
-                  <ion-label floating>Nome</ion-label>
-                  <ion-input type="text"></ion-input>
+                  <ion-label color="primary" stacked>Stacked Label</ion-label>
+                  <ion-input type="email" placeholder="Email Input"></ion-input>
                 </ion-item>
               </p>
               <p>
                 <ion-item>
-                  <ion-label floating>Nome</ion-label>
-                  <ion-input type="text"></ion-input>
+                  <ion-label color="primary" stacked>Stacked Label</ion-label>
+                  <ion-input type="email" placeholder="Email Input"></ion-input>
                 </ion-item>
               </p>
             </ion-list>
