--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -53,13 +53,13 @@
                         <span *ngIf="dataFiltro.dia===0  ; else comFiltro">
                             <ion-item class="list-evetos">
                                 <ion-fab top right class="fab-evento">
-                                    <button ion-fab class="btn-fab-evento" color="prime">
+                                    <!--<button ion-fab class="btn-fab-evento" color="prime">
                                         <div class="div-check">
                                             <ion-item color="prime">
                                                 <ion-checkbox checked="true"></ion-checkbox>
                                             </ion-item>
                                         </div>
-                                    </button>
+                                    </button>-->
                                     <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista()">
                                         <ion-icon name="ios-list" class="rstp-icone"> </ion-icon>
                                     </button>
@@ -242,13 +242,13 @@
                                     <span *ngIf=" item.itemEvento.ano===dataFiltro.ano ; else semNada">
                                         <ion-item class="list-evetos">
                                             <ion-fab top right class="fab-evento">
-                                                <button ion-fab class="btn-fab-evento" color="prime">
+                                               <!-- <button ion-fab class="btn-fab-evento" color="prime">
                                                     <div class="div-check">
                                                         <ion-item color="prime">
                                                             <ion-checkbox checked="true"></ion-checkbox>
                                                         </ion-item>
                                                     </div>
-                                                </button>
+                                                </button>-->
                                                 <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista()">
                                                     <ion-icon name="ios-list" class="rstp-icone"> </ion-icon>
                                                 </button>
