--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -60,7 +60,7 @@
                                             </ion-item>
                                         </div>
                                     </button>-->
-                                    <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista()">
+                                    <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista(item.itemEvento.nome)">
                                         <ion-icon name="ios-list" class="rstp-icone"> </ion-icon>
                                     </button>
 
@@ -249,7 +249,7 @@
                                                         </ion-item>
                                                     </div>
                                                 </button>-->
-                                                <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista()">
+                                                <button ion-fab class="btn-fab-evento" color="prime" (click)="abrirNomeLista(item.itemEvento.nome)">
                                                     <ion-icon name="ios-list" class="rstp-icone"> </ion-icon>
                                                 </button>
 
