--- a/src/pages/nome-lista-modal/nome-lista-modal.html
+++ b/src/pages/nome-lista-modal/nome-lista-modal.html
@@ -13,7 +13,7 @@
                     <ion-icon name="add" color="terci" > </ion-icon>
                   </button>
               </ion-fab>
-          <h2 class="titulonomelista">Forro do Talco</h2>
+          <h2 class="titulonomelista">{{nomeEvento}}</h2>
         </ion-item>
         <ion-card-content>
           
