nome na lista finalizado na lista de eventos AGORA SIM

--- a/src/pages/evento-descricao/evento-descricao.html
+++ b/src/pages/evento-descricao/evento-descricao.html
@@ -33,7 +33,7 @@
 
 <ion-content class="background-page " scroll="true">
   <ion-fab right bottom class="fab-nome-lista">
-    <button ion-fab class="btn-fab-evento" color="prime"  (click)="AlertNomelista()">
+    <button ion-fab class="btn-fab-evento" color="prime"  (click)="abrirNomeLista(evento.nome)">
       <ion-icon name="ios-list" class="rstp-icone"> </ion-icon>
     </button>
   </ion-fab>
