construindo cadastro evento

--- a/src/pages/eventos/eventos.html
+++ b/src/pages/eventos/eventos.html
@@ -13,7 +13,7 @@
     <ion-content>
         <ion-content class="bg no-scroll" style="overflow-y: hidden;">
             <ion-fab bottom right>
-                <button ion-fab clas="btn-fab-externo" color="prime">
+                <button ion-fab clas="btn-fab-externo" color="prime" (click)="abrirCadEvento()">
                     <ion-icon name="add"> </ion-icon>
                 </button>
             </ion-fab>
