parte2 em andamento

--- a/src/pages/cadastro-eventopt2/cadastro-eventopt2.html
+++ b/src/pages/cadastro-eventopt2/cadastro-eventopt2.html
@@ -11,6 +11,14 @@
 
 </ion-header>
 
-<ion-content padding>
+<ion-content class="background-page " padding>
 
+  <ion-card>
+
+    <ion-card-content class="card-cadastro">
+        <ion-item >
+            <button ion-button (click)="uploadBanner()" full color="danger">Banner</button>
+          </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
