--- a/src/pages/cadastro-eventopt2/cadastro-eventopt2.html
+++ b/src/pages/cadastro-eventopt2/cadastro-eventopt2.html
@@ -14,11 +14,24 @@
 <ion-content class="background-page " padding>
 
   <ion-card>
-
     <ion-card-content class="card-cadastro">
-        <ion-item >
-            <button ion-button (click)="uploadBanner()" full color="danger">Banner</button>
-          </ion-item>
+      <ion-grid>
+        <ion-row class="linha">
+          <ion-col col-6 class="colum ">
+            <button ion-button round (click)="uploadBanner()" full class="btns">
+              <ion-icon class="icons" name="image"></ion-icon>
+            </button>
+          </ion-col>
+          <ion-col col-6 class="colum ">
+            <button ion-button round (click)="abrirMapa()" full class="btns">
+              <ion-icon name="pin" class="icons"></ion-icon>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+      <ion-item class="item-imput-card">
+      <ion-textarea #msgInput rows="1" maxLength="500" (keyup)="resize()"></ion-textarea>
+    </ion-item>
     </ion-card-content>
   </ion-card>
 </ion-content>
