--- a/src/pages/menu/menu.html
+++ b/src/pages/menu/menu.html
@@ -28,7 +28,7 @@
         </ion-list>
     </ion-content>
     <ion-footer>
-        <ion-toolbar color="primary">
+        <ion-toolbar color="produtor">
             <ion-title class="title_rodape ">
                 <span> Seja um Produtor</span>
                 <ion-icon name="ribbon" class="icon-menu-premium">
@@ -39,4 +39,4 @@
 
 </ion-menu>
 
-<ion-nav [root]="rootPage" #contentMenu swipeBackEnabled="false"></ion-nav>
+<ion-nav  [root]="rootPage" #contentMenu swipeBackEnabled="false"></ion-nav>
