--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,15 +1,20 @@
+<ion-content padding class="background-page no-scroll" style="overflow-y: hidden;">
 
-<ion-header>
+  <ion-card class="cardlogologin">
 
-  <ion-navbar>
-    <ion-title>login</ion-title>
-  </ion-navbar>
+    <img class="imglogo" src="{{logo}}" />
+    <ion-card-content class="contentcardlogin">
+      <ion-item class="loginsenha">
+        <ion-label color="terci" floating>Login</ion-label>
+        <ion-input type="email"></ion-input>
+      </ion-item>
+      <ion-item class="loginsenha">
+        <ion-label color="terci" floating>Senha</ion-label>
+        <ion-input type="password"></ion-input>
+      </ion-item>
+      <button ion-button full (click)="logar()"></button>
+    </ion-card-content>
+  </ion-card>
 
-</ion-header>
-
-
-<ion-content padding>
-
-  <button ion-button full (click)="logar()"></button>
 
 </ion-content>
