--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,4 +1,4 @@
-<ion-content padding class="background-page no-scroll" style="overflow-y: hidden;">
+<ion-content class="background-page " padding>
 
   <ion-card class="cardlogologin">
 
@@ -12,8 +12,42 @@
         <ion-label color="terci" floating>Senha</ion-label>
         <ion-input type="password"></ion-input>
       </ion-item>
-      <button ion-button full (click)="logar()"></button>
+      <ion-item class="itemLembrar">
+        <ion-checkbox class="chkLembrar" mode="md"></ion-checkbox>
+        <ion-label class="lblLembrar">Lembrar?</ion-label>
+      </ion-item>
+      <button ion-button class="btnLgn"  round (click)="logar()">Login</button>
     </ion-card-content>
+    <ion-card-content class="contentcardlogin">
+      <ion-label class="lblOU">-----OU-----</ion-label>
+      <ion-row>
+        <ion-col>
+          <button ion-button full mini round class="btnSocialLng fbk" (click)="logar()">
+            <ion-icon name="logo-facebook"></ion-icon>
+          </button>
+        </ion-col>
+        <ion-col>
+          <button ion-button full mini round class="btnSocialLng ggl" (click)="logar()">
+            <ion-icon name="logo-google"></ion-icon>
+          </button>
+        </ion-col>
+      </ion-row>
+
+    </ion-card-content>
+    <ion-card-content class="contentcardlogin">
+      <ion-row>
+        <ion-col col-5>
+          <button class="btnfort" (click)="logar()"><div class="lbl">Lembrar Senha</div></button>
+        </ion-col>
+        <ion-col col-2>
+          <ion-label class="lblOU"> |</ion-label>
+        </ion-col>
+        <ion-col col-5>
+            <button class="btncad" (click)="logar()">Cadastre-se</button>
+        </ion-col>
+      </ion-row>
+    </ion-card-content>
+
   </ion-card>
 
 
