--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -43,7 +43,7 @@
           <ion-label class="lblOU"> |</ion-label>
         </ion-col>
         <ion-col col-5>
-            <button class="btncad" (click)="logar()">Cadastre-se</button>
+            <button class="btncad" (click)="cadastrar(null)">Cadastre-se</button>
         </ion-col>
       </ion-row>
     </ion-card-content>
