https://www.youtube.com/watch?v=uUMp7qcHhIc&t=265s 13:27

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -22,7 +22,7 @@
       <ion-label class="lblOU">-----OU-----</ion-label>
       <ion-row>
         <ion-col>
-          <button ion-button full mini round class="btnSocialLng fbk" (click)="logar()">
+          <button ion-button full mini round class="btnSocialLng fbk" (click)="loginComFacebook()">
             <ion-icon name="logo-facebook"></ion-icon>
           </button>
         </ion-col>
