--- a/src/pages/modal-map/modal-map.html
+++ b/src/pages/modal-map/modal-map.html
@@ -5,7 +5,8 @@
         <p class="titulomodal">
           Localização</p>
       </ion-card-header>
-      <div>
+
+      <div id="mapLocal">
         <ion-row>
           <ion-col col-6 class="colmap">
             <button ion-button class="btn-modal " round (click)="fecharMapa2()">
@@ -18,10 +19,8 @@
             </button>
           </ion-col>
         </ion-row>
-        <img src="../../assets/imgs/local.png" class="im">
-
-
       </div>
+
     </ion-card>
   </div>
 </ion-content>
